--- a/api/website/pages/premium.ejs
+++ b/api/website/pages/premium.ejs
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Premium Servers Dashboard</title>
-        <link rel="stylesheet" href="<%= base %>/premium.css">
+        <link rel="stylesheet" href="<%= base %>/static/css/premium.css">
     </head>
     <body style="background-color: #2C2F33">
         <div class="box">
