Fixed /betadash/ redirect in admin board

--- a/src/dashboard/views/admin.ejs
+++ b/src/dashboard/views/admin.ejs
@@ -30,7 +30,7 @@
                     guilds.forEach(function(guild) {
                         var li = document.createElement("li");
                         var a = document.createElement("a");
-                        a.href = "https://censorbot.jt3ch.net/betadash/"+guild.id;
+                        a.href = "https://censorbot.jt3ch.net/dash/"+guild.id;
                         a.innerText = guild.name;
                         
                         li.appendChild(a);
