--- a/src/dashboard/views/guild.ejs
+++ b/src/dashboard/views/guild.ejs
@@ -257,7 +257,7 @@
                 window.location.replace("<%=base%>")
             }
             function logs() {
-                window.location = "./logs"
+                window.location.replace("<%=base%>/<%=data.id%>/logs")
             }
         </script>
     </body>
