--- a/src/dashboard/static/css/style.css
+++ b/src/dashboard/static/css/style.css
@@ -8,7 +8,7 @@
     ". . base-filter base-filter langs langs logchannel logchannel filter filter . ."
     ". . punish punish censor censor popmsg popmsg role role . ."
     ". . punish punish censor censor popmsg popmsg uncensor uncensor . ."
-    ". . . resend resend channels channels multi multi . . ."
+    ". . resend resend channels channels multi multi resendreplace resendreplace . ."
     ". . . . . . . . . . . .";
   text-align: center;
   grid-gap: 1rem;
@@ -283,7 +283,8 @@ select {
       ". uncensor uncensor uncensor ."
       ". resend resend resend ."
       ". channels channels channels . "
-      ". multi multi multi .";
+      ". multi multi multi ."
+      ". resendreplace resendreplace resendreplace .";
   }
   #save {
     height: 2%;
