--- a/src/dashboard/views/admin.ejs
+++ b/src/dashboard/views/admin.ejs
@@ -27,10 +27,10 @@
         </div>
         <div>
             <h3>Guild Control</h3>
-            <input placeholder="Server ID">
-            <button onclick="req('')">Leave</button>
-            <button>Get Config</button>
-            <button>Reset Config</button>
+            <input id='guild' placeholder="Server ID">
+            <button onclick="guild('DELETE')">Leave</button>
+            <button onclick="guild('GET')">Get Config</button>
+            <button onclick="guild('PUT')">Reset Config</button>
         </div>
         <div>
             <h3>Response</h3>
@@ -70,6 +70,10 @@
                 xhr.setRequestHeader('Content-Type', 'application/json');
                 xhr.setRequestHeader("Authorization", "<%=token%>");
                 xhr.send(body ? JSON.stringify(body) : null);
+            }
+
+            function guild(method) {
+                req('/guilds/' + document.getElementById('guild').value, method, null, console.log)
             }
         </script>
     </body>
