--- a/src/dashboard/views/errors/gotologin.ejs
+++ b/src/dashboard/views/errors/gotologin.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta property="og:title" content="Censor Bot Dashboard">
-        <meta property="og:image" content="https://censorbot.jt3ch.net/censorbot.png">
+        <meta property="og:image" content="https://censor.bot/censorbot.png">
         <meta property="og:description" content="Change and customize Censor Bot for your server(s)!">
         <meta name="theme-color" content="#ff3d00">
     </head>
