--- a/src/dashboard/views/invite.ejs
+++ b/src/dashboard/views/invite.ejs
@@ -39,7 +39,7 @@
     </body>
     <script>
         function init() {
-            var win = window.open("https://censorbot.jt3ch.net/invite?id=<%= id %>", "oauth", "location=0,status=0,width=800,height=400");
+            var win = window.open("https://censor.bot/invite?id=<%= id %>", "oauth", "location=0,status=0,width=800,height=400");
             var interval = setInterval(function() {
                 if(win.closed) window.location.reload()
             }, 1000)
