--- a/src/dashboard/views/update.ejs
+++ b/src/dashboard/views/update.ejs
@@ -17,7 +17,7 @@
 <html>
   <head>
     <meta property="og:title" content="Update v<%= update.v %>">
-    <meta property="og:url" content="https://censorbot.jt3ch.net/updates/<%= update.v %>">
+    <meta property="og:url" content="https://censor.bot/updates/<%= update.v %>">
     <meta property="og:description" content="<%= update.desc %>">
     <meta name="theme-color" content="#f44646">
 
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div id="main">
-      <button onclick="window.location.replace('https://censorbot.jt3ch.net/updates#<%= update.v %>')">Back</button o>
+      <button onclick="window.location.replace('https://censor.bot/updates#<%= update.v %>')">Back</button o>
       <div class="update">
         <h1>
           v<%= update.v %> | <%= formatDate(update.date) %>
