--- a/src/dashboard/views/updates.ejs
+++ b/src/dashboard/views/updates.ejs
@@ -46,7 +46,7 @@
           <h1>
             v<%= update.v %> | <%= formatDate(update.date) %>
             <br>
-            <button onclick="window.location.replace('https://censorbot.jt3ch.net/updates/<%= update.v %>')">Open</button>
+            <button onclick="window.location.replace('https://censor.bot/updates/<%= update.v %>')">Open</button>
           </h1>
           <p> <%= update.desc %> </p>
         </div>
