--- a/src/dashboard/views/errors/notpremium.ejs
+++ b/src/dashboard/views/errors/notpremium.ejs
@@ -36,8 +36,8 @@
     <body>
         <h1 class="txt">You're not premium!</h1>
         <div>
-            <button onclick="window.location = 'https://censorbot.jt3ch.net/dash'">Back</button>
-            <button onclick="window.location = 'https://censorbot.jt3ch.net/premium'">Go Premium!</button>
+            <button onclick="window.location = 'https://dash.censor.bot'">Back</button>
+            <button onclick="window.location = 'https://censor.bot/premium'">Go Premium!</button>
         </div>
     </body>
 </html>
